// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopAppBar should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-9 #unique-tooltip-id {
  display: none!important;
}

.emotion-10 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-13 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-18 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-18 path {
  fill: black;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-9 #unique-tooltip-id {
  display: none!important;
}

.emotion-10 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-13 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-18 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-18 path {
  fill: black;
}

<div>
  <div
    aria-label="Top Application Banner"
    class="emotion-0"
    role="banner"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="menu-handler"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          />
        </span>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
    />
    <div
      class="emotion-8"
    >
      <div
        role="button"
      >
        <div
          data-testid="userMenu"
        >
          <div
            class="emotion-9"
          >
            <button
              class="emotion-10"
              data-testid="button"
              type="button"
            >
              <span
                class="emotion-11"
              >
                <span
                  class="emotion-12"
                >
                  <div
                    class="emotion-13"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  class="emotion-14"
                >
                  <span>
                    <span
                      class="emotion-15"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  class="emotion-12"
                >
                  <span
                    class="emotion-3"
                  >
                    <span
                      class="emotion-18"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopAppBar should render correctly on dark 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: white;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-9 #unique-tooltip-id {
  display: none!important;
}

.emotion-10 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #030303;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #020202;
}

.emotion-10:active:not(:disabled) {
  background-color: #020202;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-13 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-18 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-18 path {
  fill: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: white;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-9 #unique-tooltip-id {
  display: none!important;
}

.emotion-10 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #030303;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #020202;
}

.emotion-10:active:not(:disabled) {
  background-color: #020202;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-13 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-15 {
  font-weight: 500;
}

.emotion-18 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-18 path {
  fill: white;
}

<div>
  <div
    aria-label="Top Application Banner"
    class="emotion-0"
    role="banner"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        data-testid="menu-handler"
      >
        <span
          class="emotion-3"
        >
          <span
            class="emotion-4"
          />
        </span>
      </div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
    />
    <div
      class="emotion-8"
    >
      <div
        role="button"
      >
        <div
          data-testid="userMenu"
        >
          <div
            class="emotion-9"
          >
            <button
              class="emotion-10"
              data-testid="button"
              type="button"
            >
              <span
                class="emotion-11"
              >
                <span
                  class="emotion-12"
                >
                  <div
                    class="emotion-13"
                  >
                    <img
                      src="https://mui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  class="emotion-14"
                >
                  <span>
                    <span
                      class="emotion-15"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  class="emotion-12"
                >
                  <span
                    class="emotion-3"
                  >
                    <span
                      class="emotion-18"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
